--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 .btn-primary{color: #fff;background:#00a9c6;width: 100%;outline: none;}
 .btn-primary:hover,.btn-primary:active,.btn-primary:focus{background:#1BC0DC;box-shadow: none;}
 
-.topbar {background:url(../lines.png);	height:5px;position: fixed;top: 0;width: 100%;z-index: 1000;}
+.topbar {background:url(lines.png);	height:5px;position: fixed;top: 0;width: 100%;z-index: 1000;}
 .navbar-nav > li > a{font-size: 1em;line-height: 3.6em;}
 .navbar-fixed-top{top: 5px;}
 .navbar-inverse{background: #111;}
@@ -43,7 +43,7 @@ p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 .caption-info{display: table-cell;vertical-align: middle;}
 .caption-info p{font-size: 1.25em;}
 .caption-info .btn i{margin-right:0.75em;}
-.carousel-inner > .item > img, .carousel-inner > .item > a > img{width: 100%;}
+.carousel-inner > .item > img, .carousel-inner > .item > a > img{width: 50%;}
 .carousel-control{z-index:1000;}
 
 /*about*/
