--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -68,7 +68,7 @@ a:hover {
 	margin-top: 50px;
 	width: 88%;
 	height: 400px;
-	background-color: #F4EBC3;
+	background-color: #ffccb3;
 	margin-bottom: 10px;
 }
 
