--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -13,7 +13,7 @@ div {
 }
 
 #name {
-	float:center;
+	text-align:center;
 	margin-left: 5px;
 	padding-top: 5px;
 	font-size: 16px;
@@ -22,7 +22,7 @@ div {
 }
 
 #email{
-	float:left;
+	text-align: right;
 	margin-right: 5px;
 	padding-top: 5px;
 	font-size: 16px;
