--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -33,7 +33,7 @@ div {
 h4 {
 	margin-left: 5px;
 	margin-bottom: 15px;
-	font-family: Verdana, sans-serif;
+	font-family: sans-serif;
 }
 
 .right p {
