--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -13,7 +13,8 @@ div {
 }
 
 #name {
-	text-align:center;
+	/*text-align:center;*/
+	float: left;
 	margin-left: 5px;
 	padding-top: 5px;
 	font-size: 16px;
