--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -14,7 +14,7 @@ div {
 
 #name {
 	/*text-align:center;*/
-	float: left;
+	/*float: left;*/
 	margin-left: 5px;
 	padding-top: 5px;
 	font-size: 16px;
