--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -57,7 +57,7 @@ a:hover {
 	position: relative;
 	float: left;
 	margin-top: 50px;
-	width: 10%;
+	width: 30px;
 	height: 400px;
 	background-color: #b3daff;
 	margin-bottom: 10px;
