--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -72,8 +72,8 @@ a:hover {
 	background-color: #ffccb3;
 	margin-bottom: 10px;
 }
-ol {
-	text-decoration:none;
+a {
+	text-decoration: none;
 }
 #footer {
 	position: relative;
